client/src/style.css
/* ... */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
   line-height: 23px;
 }

 :root {
  --text-font: 'Montserrat', sans-serif;
  --title-font: 'Abril Fatface', serif;
  --text-color: #171717;
  --secondary-text-color: rgba(117, 117, 117, 1);
  --main-bg-color: #ffffff; 
  --primay-btn-color: #ffffff;
  --primay-btn-bgcolor: #BD2D0A;
  --secondary-btn-color: #826b60;
  --secondary-btn-color-light: #05284fBF;
  --secondary-btn-bgcolor: #ffffff;
  --secondary-btn-color-hover: #ffffff;
  --secondary-btn-bgcolor-hover: #05284f;
  --tertiary-btn-color: #ffffff;
  --tertiary-btn-bgcolor: #fda62b;
  --success-btn: #42bda1;
}

 body {
   height: 100%;
   width: 100%;
   background: var(--main-bg-color);
   overflow-x: hidden;
   scroll-behavior: smooth !important;
   scroll-snap-type: y mandatory;
 }

 h1 {
  font-family: var(--title-font);
  font-weight: 400;
  font-style: normal;
  font-size: 3.5rem;
  line-height: 4rem;
  letter-spacing: .5rem;
  color: var(--text-color);
 }

 h2 {
  font-family: var(--text-font);
  font-size: 1.25rem;
  line-height: 1.6rem;
  font-weight: 400;
  color: var(--text-color); 
 }

 h3 {
   font-family: var(--text-font);
   font-size: 1.1rem;
   line-height: 1.6rem;
   font-weight: 600;
   letter-spacing: .06rem;
   color: var(--text-color);
 }

 a {
   text-decoration: none;
   color: var(--main-bg-color);
 }

 p {
   font-family: var(--text-font);
   overflow-wrap: break-word;
 }

 ol, ul {
   margin-left: 25px !important;
 }

  /* NAVBAR */

 .navBar {
   width: 100%;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
   padding: 10px 20px;
   background-color: transparent;
 }

 .navBar-home-icon {
   position: fixed;
   height: 50px;
   opacity: .6;
   transition: all .3s ease-in-out;
   z-index: 1;
 }

 .navBar-home-icon:hover {
  opacity: 1;
 }

 .hamburger {
    position: fixed;
    padding: 10px;
    top: 30px;
    right: 25px;
    cursor: pointer;
    z-index: 3;
    transition: all .5s ease-in-out;
  }
  
 .line {
    height: 4px;
    width: 35px;
    border: none;
    background-color: var(--text-color);
    transition: all .5s ease-in-out;
  }

.line::before,
.line::after {
  content: '';
  position: absolute;
  width: 35px;
  height: 4px;
  background-color: var(--text-color);
  transition: all .5s ease-in-out;
}

.line::before {
  transform: translateY(-10px);
}
.line::after {
  transform: translateY(10px);
}

/* ANIMATION */
.hamburger.open .line {
  transform: translateX(50px);
  background: transparent;
}
.hamburger.open .line::before {
  transform: rotate(45deg) translate(-35px, 35px);
  background: var(--main-bg-color);
}
.hamburger.open .line::after {
  transform: rotate(-45deg) translate(-35px, -35px);
  background: var(--main-bg-color);
}

.menu-bar {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #826b60;
  position: fixed;
  top: 0;
  right: 0;
  height: 100vh;
  width: 50%;
  z-index: 2;
  transform: translateX(100%);
  transition: all .5s ease-in-out;
  padding: 50px 0;
}

.menu-bar.open-menu {
  transform: translateX(-1%);
}

 .navBar-items {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   margin: 0 !important; 
 }

 li.navBar-link-item {
   position: relative;
   z-index: 3;
   font-family: var(--text-font);
   opacity: .6;
   font-weight: 500;
   list-style: none;
   text-decoration: none;
   color: var(--main-bg-color);
   transition: all .3s ease-in-out;
 }

 .navBar-link-item:hover {
   opacity: 1;
 }

  /* PAGE elements */
.bg-img {
  position: relative;
  top: 0;
  left: 0;
  background-color: #e3dcda;
  width: 100%;
  height: 100vh;
  overflow: visible;
  padding-top: 6rem;
  margin-top: -20px;
}

  .container {
   width: 100%;
   margin: 0 auto;
   background-color: transparent;
   min-height: 100vh;
 }

 #main-home {
   max-width: 1300px !important;
   height: 100%;
   padding: 30px;
   scroll-snap-align: center;
 }

 .main-img {
   position: absolute;
   bottom: 0;
   right: 10vw;
   height: 100%;
   max-height: 650px;
   overflow: hidden;
   z-index: 0;
   opacity: .9;
 }

 .homepage-title-wrapper {
   position: relative;
   top:15%;
   left: 0;
   z-index: 1;
   padding-left: 4rem;
 }

 #homepage-title {
   position: relative;
   font-size: 4rem;
   padding: 10px 0;
 }

#subhead {
  position: relative;
  color: #ffffff;
  font-size: 2rem;
  letter-spacing: 2.4rem;
  margin-left: .3rem;
  padding: 10px 0 40px 0;
}

#main-cta {
  border-radius: 0;
}

.secondary-inverse {
  font-size: 20px;
  line-height: 26px;
  color: var(--primay-btn-color);
  background-color: var(--secondary-btn-color);
  border: none !important;
  padding: 10px 20px;
  margin-left: 10px;
  opacity: .8;
  transition: all .3s ease-in-out;
}

.secondary-inverse:hover {
  opacity: 1;
}

.featured {
  scroll-snap-align: center;
  height: 100%;
  min-height: 100vh;
}

#featured-section, #about-section {
   position: relative;
   font-size: 55px;
   line-height: 61px;
   font-weight: 400;
   text-align: center;
   color: var(--text-color);
 }

 #about-section {
   padding: 4rem 0 2rem 0;
 }

#featured {
  padding: 6rem 0 2rem 0;
}

.featured-block {
  padding: 65px 30px;
  margin-left: 25px;
  display: flex;
  justify-content: space-evenly;
}

.subhead {
  text-align: center;
  padding-bottom: 1rem;
  color: var(--text-color);
  opacity: .6;
}

.about {
  padding: 0 4rem;
  height: 100%;
  min-height: 90vh;
  scroll-snap-align: center;
}

.about-content-wrapper {
  padding: 50px;
 
}

.about-content {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  padding: 50px 0 100px 0;
}

.review {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 40px;

}
/* ... */

